feat(storage): Added search records functionality
